# cmake_template

./: CMakeLists.txt  CMakePresets.json  test.ipynb
src/: main.cpp  my_ext.cpp
